--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
-    "solid-js": "^1.7.6"
+    "solid-js": "^1.7.6",
+    "vite-tsconfig-paths": "^4.2.3"
   }
 }
