--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint": "^8.53.0",
     "eslint-plugin-solid": "^0.13.0",
     "postcss": "^8.4.24",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "solid-devtools": "^0.27.3",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3",
@@ -22,6 +24,7 @@
     "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.7.6",
     "vite-tsconfig-paths": "^4.2.3"
   }
