--- a/package.json
+++ b/package.json
@@ -6,26 +6,31 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vitest"
   },
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "daisyui": "^4.0.4",
-    "eslint": "^8.53.0",
-    "eslint-plugin-solid": "^0.13.0",
-    "postcss": "^8.4.24",
-    "prettier": "^3.1.1",
+    "@solidjs/testing-library": "^0.8.5",
+    "@testing-library/jest-dom": "^6.2.0",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^4.6.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-solid": "^0.13.1",
+    "jsdom": "^23.2.0",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "solid-devtools": "^0.27.3",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
-    "vite-plugin-solid": "^2.7.0"
+    "solid-devtools": "^0.27.9",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^4.5.1",
+    "vite-plugin-solid": "^2.8.0",
+    "vitest": "^1.2.0"
   },
   "dependencies": {
     "solid-icons": "^1.1.0",
-    "solid-js": "^1.7.6",
+    "solid-js": "^1.8.11",
     "vite-tsconfig-paths": "^4.2.3"
   }
 }
